# cash-plan-backend

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  seed.py  seed_categories.py
alembic/: env.py
alembic/versions/: 8cb4bd422410_add_categories_table.py  94b30e94c903_add_shopping_lists_and_items_tables.py  be42d832b6a1_initial_migration_with_all_tables.py  f235c65af80f_initial_migration_with_users_and_.py
app/: auth.py  database.py  db_schema.py  main.py  models.py  schemas.py
app/routers/: accounts.py  auth.py  categories.py  credit_cards.py  genai.py  goals.py  investments.py  shopping_lists.py  transactions.py
