[project]
name = "cash-plan-backend"
version = "1.0.0"
description = "Backend da aplicação Cash Plan - Gestão Financeira Pessoal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "python-jose[cryptography]==3.3.0",
    "passlib==1.7.4",
    "bcrypt==4.0.1",
    "email-validator==2.2.0",
    "google-generativeai==0.3.2",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

